IPP/projects/IPP-test.php-master/int-only/vyzi_tests/should-fail/pops5.src
<?xml version="1.0" encoding="UTF-8"?>
<program language="IPPcode19">
	<instruction order="1" opcode="PUSHS">
		<arg1 type="int">242024</arg1>
	</instruction>
	<instruction order="2" opcode="POPS">
		<arg1 type="var">LF@natuh</arg1>
	</instruction>
</program>
